minio-s3/s3-console-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: s3-console
  namespace: s3-storage
spec:
  clusterIP: 172.30.124.219
  ipFamilies:
    - IPv4
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  internalTrafficPolicy: Cluster
  clusterIPs:
    - 172.30.124.219
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: s3-storage-minio
