minio-s3/s3-console-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: s3-console
  namespace: s3-storage

spec:
  host: s3-console-s3-storage.apps.bm1.pietersmalan.com
  to:
    kind: Service
    name: s3-console
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
