minio-s3/s3-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: s3
  namespace: s3-storage
spec:
  host: s3-s3-storage.apps.bm1.pietersmalan.com
  to:
    kind: Service
    name: s3
    weight: 100
  port:
    targetPort: 9000
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
status:
  ingress:
    - host: s3-s3-storage.apps.bm1.pietersmalan.com
      routerName: default
      conditions:
        - type: Admitted
          status: 'True'
          lastTransitionTime: '2023-11-07T18:31:29Z'
      wildcardPolicy: None
      routerCanonicalHostname: router-default.apps.bm1.pietersmalan.com
